--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,39 @@
         <link rel="stylesheet" href="build/tailwind.css">
         <title>Online Store</title>
     </head>
-    <body class="bg-gray-100">
+    <body class="bg-gray-200">
+        <!--app bar-->
+        <div class="flex justify-between items-center mt-11 px-4 mb-6">
+            <div>Digitize</div>
+            <div class="text-lg font-bold text-slate-800">ساعت هوشمند</div>
+            <div class="w-7 h-7 bg-white shadow-md flex justify-center items-center rounded-lg">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-5 w-5">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+                </svg>
 
+            </div>
+        </div>
+        <!--filter and sort mobile section-->
+        <div class="flex justify-between items-center px-4 gap-x-2">
+            <div class="flex items-center justify-start bg-white rounded-md py-2 pr-4 w-1/2">
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-5 w-5 stroke-orange-600">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5M12 17.25h8.25" />
+                    </svg>
+
+                </div>
+                <span class="text-slate-800 text-sm font-medium mr-3">محبوب ترین </span>
+            </div>
+
+            <div class="flex items-center justify-start bg-white rounded-md py-2 pr-4 w-1/2">
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-5 w-5 stroke-gray-400">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 3c2.755 0 5.455.232 8.083.678.533.09.917.556.917 1.096v1.044a2.25 2.25 0 0 1-.659 1.591l-5.432 5.432a2.25 2.25 0 0 0-.659 1.591v2.927a2.25 2.25 0 0 1-1.244 2.013L9.75 21v-6.568a2.25 2.25 0 0 0-.659-1.591L3.659 7.409A2.25 2.25 0 0 1 3 5.818V4.774c0-.54.384-1.006.917-1.096A48.32 48.32 0 0 1 12 3Z" />
+                    </svg>
+
+                </div>
+                <span class="text-slate-800 text-sm mr-2 font-medium">فیلتر : اپل</span>
+            </div>
+        </div>
     </body>
 </html>
