--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,10 @@
             <div>Digitize</div>
             <div class="text-lg font-bold text-slate-800">ساعت هوشمند</div>
             <div class="w-7 h-7 bg-white shadow-md flex justify-center items-center rounded-lg">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-5 w-5">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                     stroke="currentColor" class="h-5 w-5">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                          d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"/>
                 </svg>
 
             </div>
@@ -23,8 +25,10 @@
         <div class="flex md:hidden justify-between items-center px-4 gap-x-2 mb-9">
             <div class="flex items-center justify-start bg-white rounded-md py-2 pr-4 w-1/2">
                 <div>
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-5 w-5 stroke-orange-600">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5M12 17.25h8.25" />
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                         stroke="currentColor" class="h-5 w-5 stroke-orange-600">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                              d="M3.75 6.75h16.5M3.75 12h16.5M12 17.25h8.25"/>
                     </svg>
 
                 </div>
@@ -33,61 +37,88 @@
 
             <div class="flex items-center justify-start bg-white rounded-md py-2 pr-4 w-1/2">
                 <div>
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-5 w-5 stroke-gray-400">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 3c2.755 0 5.455.232 8.083.678.533.09.917.556.917 1.096v1.044a2.25 2.25 0 0 1-.659 1.591l-5.432 5.432a2.25 2.25 0 0 0-.659 1.591v2.927a2.25 2.25 0 0 1-1.244 2.013L9.75 21v-6.568a2.25 2.25 0 0 0-.659-1.591L3.659 7.409A2.25 2.25 0 0 1 3 5.818V4.774c0-.54.384-1.006.917-1.096A48.32 48.32 0 0 1 12 3Z" />
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                         stroke="currentColor" class="h-5 w-5 stroke-gray-400">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                              d="M12 3c2.755 0 5.455.232 8.083.678.533.09.917.556.917 1.096v1.044a2.25 2.25 0 0 1-.659 1.591l-5.432 5.432a2.25 2.25 0 0 0-.659 1.591v2.927a2.25 2.25 0 0 1-1.244 2.013L9.75 21v-6.568a2.25 2.25 0 0 0-.659-1.591L3.659 7.409A2.25 2.25 0 0 1 3 5.818V4.774c0-.54.384-1.006.917-1.096A48.32 48.32 0 0 1 12 3Z"/>
                     </svg>
 
                 </div>
                 <span class="text-slate-800 text-sm mr-2 font-medium">فیلتر : اپل</span>
             </div>
         </div>
-        <!--mobile products section-->
-        <div class="grid gap-2 grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
-            <!--product card-->
-            <div class="bg-white rounded-xl p-1.5 shadow-md">
-                <!--card image-->
-                <div class="bg-slate-200 rounded-xl p-2 mb-3">
-                    <img src="../assets/images/apple-watch-7.png" class="" alt="">
-                </div>
-                <!--card colors and options-->
-                <div class="flex justify-between items-center mb-2">
-                    <span class="text-slate-200 text-sm md:text-base">اپل</span>
-                    <!--color groups section -->
-                    <div x-data="{color : 'red'}" class="flex items-center">
-                        <div @click="color='red'" :class="color==='red' ? 'ring-2 ring-red-500 ' : ''"    class="h-6 w-6  sm:w-8 sm:h-8 rounded-full cursor-pointer border-2  bg-red-500 ">
-                            <svg x-show="color==='red'" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-5 sm:size-6 text-white">
-                                <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z" clip-rule="evenodd" />
-                            </svg>
+
+        <div class="grid grid-cols-12 md:gap-8 py-4">
+            <!--sidebar-->
+            <div class=" hidden md:block bg-white col-span-3 lg:col-span-3 row-span-2">side-bar</div>
+            <!--sort section-->
+            <div class=" hidden md:block bg-white col-span-9">sort section</div>
+            <!--products-section-->
+            <div class="bg-white col-span-12 md:col-span-9 lg:col-span-9 rounded-xl p-4">
+                <!-- products section-->
+                <div x-data="{
+    products: [
+        { id: 1, brand: 'اپل', name: 'ساعت هوشمند اپل سری ۳', price: '۱۳,۴۵۶,۷۸۹ تومان', image: '../assets/images/apple-watch-7.png' },
+        { id: 2, brand: 'اپل', name: '۱۳ گوشی آیفون ', price: '۱۳,۴۵۶,۷۸۹ تومان', image: '../assets/images/iphone-13.png' },
+        { id: 3, brand: 'سونی', name: 'ساعت هوشمند سونی', price: '۱۳,۴۵۶,۷۸۹ تومان', image: 'https://example.com/ps5.jpg' },
+        { id: 4, brand: 'دل', name: 'لپ‌تاپ XPS 13', price: '۱۳,۴۵۶,۷۸۹ تومان', image: 'https://example.com/xps13.jpg' },
+        { id: 5, brand: 'نایک', name: 'کفش ورزشی ایر مکس', price: '۱۳,۴۵۶,۷۸۹ تومان', image: 'https://example.com/airmax.jpg' }
+    ]}" class="grid justify-center gap-x-2 gap-y-8 sm:gap-x-4 min-[420px]:grid-cols-2  sm:grid-cols-2 lg:grid-cols-4 py-4">
+                    <!--product card-->
+                    <template x-for="product in products" :key="product.id">
+                        <div class="bg-white rounded-xl p-1.5 shadow-xl">
+                            <!--card image-->
+                            <div class="bg-slate-200 rounded-xl p-2 mb-3">
+                                <img src="../assets/images/apple-watch-7.png" class="" alt="">
+                            </div>
+                            <!--card colors and options-->
+                            <div class="flex justify-between items-center mb-2">
+                                <span class="text-slate-200 text-sm md:text-base" x-text="product.brand"></span>
+                                <!--color groups section -->
+                                <div x-data="{color : 'red'}" class="flex items-center">
+                                    <div @click="color='red'" :class="color==='red' ? 'ring-2 ring-red-500 ' : ''"
+                                         class="h-6 w-6  sm:w-8 sm:h-8 rounded-full cursor-pointer border-2  bg-red-500 ">
+                                        <svg x-show="color==='red'" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+                                             fill="currentColor" class="size-5 sm:size-6 text-white">
+                                            <path fill-rule="evenodd"
+                                                  d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z"
+                                                  clip-rule="evenodd"/>
+                                        </svg>
+                                    </div>
+                                    <div @click="color='blue'" :class="color==='blue' ? 'ring-2 ring-blue-500 ' : ''"
+                                         class="h-6 w-6 sm:w-8 sm:h-8 rounded-full cursor-pointer border-2  bg-blue-500 -mr-1.5 ">
+                                        <svg x-show="color==='blue'" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+                                             fill="currentColor" class="size-5 sm:size-6 text-white">
+                                            <path fill-rule="evenodd"
+                                                  d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z"
+                                                  clip-rule="evenodd"/>
+                                        </svg>
+                                    </div>
+                                    <div @click="color='green'" :class="color==='green' ? 'ring-2 ring-green-500 ' : ''"
+                                         class="h-6 w-6 sm:w-8 sm:h-8  rounded-full cursor-pointer border-2  bg-green-500 -mr-1.5">
+                                        <svg x-show="color==='green'" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+                                             fill="currentColor" class="size-5 text-white sm:size-6">
+                                            <path fill-rule="evenodd"
+                                                  d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z"
+                                                  clip-rule="evenodd"/>
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--card-descriptions-->
+                            <div class="text-center sm:text-start w-full mb-2">
+                                <p x-text="product.name" class="text-slate-800 font-bold text-xs sm:text-base md:text-base">ساعت هوشمند اپل سری ۳</p>
+                            </div>
+                            <div class="text-center w-full mb-2 sm:text-end">
+                                <p x-text="product.price" class="text-orange-600 font-bold text-sm sm:text-base md:text-base">'۱۳,۴۵۶,۷۸۹ تومان'</p>
+                            </div>
+                            <div class="w-full bg-slate-100 p-0.5 mb-1 h-0.5"></div>
+                            <button class="w-full text-orange-400 font-bold md:text-lg py-1">مشاهده و سفارش</button>
+
                         </div>
-                        <div @click="color='blue'" :class="color==='blue' ? 'ring-2 ring-blue-500 ' : ''" class="h-6 w-6 sm:w-8 sm:h-8 rounded-full cursor-pointer border-2  bg-blue-500 -mr-1.5 ">
-                            <svg x-show="color==='blue'" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-5 sm:size-6 text-white">
-                                <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z" clip-rule="evenodd" />
-                            </svg>
-                        </div>
-                        <div @click="color='green'" :class="color==='green' ? 'ring-2 ring-green-500 ' : ''"  class="h-6 w-6 sm:w-8 sm:h-8  rounded-full cursor-pointer border-2  bg-green-500 -mr-1.5">
-                            <svg x-show="color==='green'" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-5 text-white sm:size-6">
-                                <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z" clip-rule="evenodd" />
-                            </svg>
-                        </div>
-                    </div>
+                    </template>
                 </div>
-                <!--card-descriptions-->
-                <div class="text-center sm:text-start w-full mb-2">
-                   <p class="text-slate-800 font-medium text-xs sm:text-sm md:text-base">ساعت هوشمند اپل سری ۳</p>
-                </div>
-                <div class="text-center w-full mb-4 sm:text-end">
-                    <p class="text-orange-600 font-bold text-sm sm:text-sm md:text-base">۱۳,۴۵۶,۷۸۹ تومان</p>
-                </div>
-                <div class="w-full bg-slate-100 p-0.5 mb-2 h-0.5"></div>
-                    <button class="w-full text-orange-400 font-bold md:text-lg py-1">مشاهده و سفارش</button>
-                </div>
-            <div class="bg-blue-100">2</div>
-            <div class="bg-blue-100">3</div>
-            <div class="bg-blue-100">4</div>
-            <div class="bg-blue-100">5</div>
-            <div class="bg-blue-100">6</div>
-            <div class="bg-blue-100">7</div>
-            <div class="bg-blue-100">8</div>
+            </div>
         </div>
         <script src="//unpkg.com/alpinejs" defer></script>
     </body>
