--- a/public/index.html
+++ b/public/index.html
@@ -48,13 +48,42 @@
             </div>
         </div>
 
-        <div class="grid grid-cols-12 md:gap-8 py-4">
+        <div class="grid grid-cols-12 md:gap-8 p-4">
             <!--sidebar-->
             <div class=" hidden md:block bg-white col-span-3 lg:col-span-3 row-span-2">side-bar</div>
             <!--sort section-->
-            <div class=" hidden md:block bg-white col-span-9">sort section</div>
+            <div class=" hidden md:block col-span-9" >
+                <div class="bg-white px-4 flex items-center rounded-xl gap-x-6 text-gray-400 text-lg" x-data="{sort : 1 , activeClass:'text-slate-800 font-bold'}">
+                    <div>
+                        <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect width="42" height="42" rx="4" fill="#FFCBCB"/>
+                            <path d="M17.7704 15H35.8957" stroke="#FF755C" stroke-width="4.5" stroke-linecap="round"/>
+                            <path opacity="0.34" d="M20.7913 20H32.8748" stroke="#FF755C" stroke-width="1.5" stroke-linecap="round"/>
+                            <path d="M24.8192 25H28.847" stroke="#FF755C" stroke-width="1.5" stroke-linecap="round"/>
+                            <path d="M8.70745 30.3958C8.59584 30.3958 8.48424 30.355 8.39613 30.2675L4.83064 26.7267C4.66029 26.5575 4.66029 26.2775 4.83064 26.1083C5.00098 25.9392 5.28293 25.9392 5.45328 26.1083L8.70745 29.34L11.9616 26.1083C12.132 25.9392 12.4139 25.9392 12.5843 26.1083C12.7546 26.2775 12.7546 26.5575 12.5843 26.7267L9.01876 30.2675C8.93066 30.355 8.81905 30.3958 8.70745 30.3958Z" fill="#FF755C"/>
+                            <path d="M8.77039 29.604C8.49515 29.604 8.26691 29.2701 8.26691 28.8675V12.3405C8.26691 11.9379 8.49515 11.604 8.77039 11.604C9.04562 11.604 9.27387 11.9379 9.27387 12.3405V28.8675C9.27387 29.2701 9.04562 29.604 8.77039 29.604Z" fill="#FF755C"/>
+                        </svg>
+
+                    </div>
+                    <button @click="sort=1"  :class="sort===1 && activeClass" class="py-4 px-3 relative">
+                        <span> محبوب ترین محصول</span>
+                        <span x-show="sort===1" class="h-2 w-2 bg-orange-600 rounded-full absolute top-1 left-0"></span>
+                    </button>
+                    <button @click="sort=2"  :class="sort===2 && activeClass" class="py-4 px-3 relative">
+                        <span>پرفروش ترین محصول </span>
+                        <span x-show="sort===2" class="h-2 w-2 bg-orange-600 rounded-full absolute top-1 left-0"></span>
+                    </button><button @click="sort=3"  :class="sort===3 && activeClass" class="py-4 px-3 relative">
+                    <span>گرانترین محصول</span>
+                    <span x-show="sort===3" class="h-2 w-2 bg-orange-600 rounded-full absolute top-1 left-0"></span>
+                </button>
+                    <button @click="sort=4"  :class="sort===4 && activeClass" class="py-4 px-3 relative">
+                    <span>ارزانترین محصول</span>
+                    <span x-show="sort===4" class="h-2 w-2 bg-orange-600 rounded-full absolute top-1 left-0"></span>
+                </button>
+                </div>
+            </div>
             <!--products-section-->
-            <div class="bg-white col-span-12 md:col-span-9 lg:col-span-9 rounded-xl p-4">
+            <div class="col-span-12 md:col-span-9 lg:col-span-9 rounded-xl ">
                 <!-- products section-->
                 <div x-data="{
     products: [
@@ -63,17 +92,17 @@
         { id: 3, brand: 'سونی', name: 'ساعت هوشمند سونی', price: '۱۳,۴۵۶,۷۸۹ تومان', image: 'https://example.com/ps5.jpg' },
         { id: 4, brand: 'دل', name: 'لپ‌تاپ XPS 13', price: '۱۳,۴۵۶,۷۸۹ تومان', image: 'https://example.com/xps13.jpg' },
         { id: 5, brand: 'نایک', name: 'کفش ورزشی ایر مکس', price: '۱۳,۴۵۶,۷۸۹ تومان', image: 'https://example.com/airmax.jpg' }
-    ]}" class="grid justify-center gap-x-2 gap-y-8 sm:gap-x-4 min-[420px]:grid-cols-2  sm:grid-cols-2 lg:grid-cols-4 py-4">
+    ]}" class="grid justify-between gap-x-3 gap-y-6 lg::gap-x-8 min-[420px]:grid-cols-2  sm:grid-cols-2 lg:grid-cols-4 py-4">
                     <!--product card-->
                     <template x-for="product in products" :key="product.id">
-                        <div class="bg-white rounded-xl p-1.5 shadow-xl">
+                        <div class="bg-white rounded-xl p-2 shadow-xl">
                             <!--card image-->
                             <div class="bg-slate-200 rounded-xl p-2 mb-3">
                                 <img src="../assets/images/apple-watch-7.png" class="" alt="">
                             </div>
                             <!--card colors and options-->
                             <div class="flex justify-between items-center mb-2">
-                                <span class="text-slate-200 text-sm md:text-base" x-text="product.brand"></span>
+                                <span class="text-slate-300 text-sm md:text-base lg:text-lg" x-text="product.brand"></span>
                                 <!--color groups section -->
                                 <div x-data="{color : 'red'}" class="flex items-center">
                                     <div @click="color='red'" :class="color==='red' ? 'ring-2 ring-red-500 ' : ''"
@@ -107,14 +136,13 @@
                             </div>
                             <!--card-descriptions-->
                             <div class="text-center sm:text-start w-full mb-2">
-                                <p x-text="product.name" class="text-slate-800 font-bold text-xs sm:text-base md:text-base">ساعت هوشمند اپل سری ۳</p>
+                                <p x-text="product.name" class="text-slate-800 font-bold text-sm sm:text-base md:text-lg">ساعت هوشمند اپل سری ۳</p>
                             </div>
-                            <div class="text-center w-full mb-2 sm:text-end">
-                                <p x-text="product.price" class="text-orange-600 font-bold text-sm sm:text-base md:text-base">'۱۳,۴۵۶,۷۸۹ تومان'</p>
+                            <div class="text-center w-full mb-2 ">
+                                <p x-text="product.price" class="text-orange-600 font-bold text-sm sm:text-base md:text-lg">'۱۳,۴۵۶,۷۸۹ تومان'</p>
                             </div>
                             <div class="w-full bg-slate-100 p-0.5 mb-1 h-0.5"></div>
                             <button class="w-full text-orange-400 font-bold md:text-lg py-1">مشاهده و سفارش</button>
-
                         </div>
                     </template>
                 </div>
