design the single product page and make its appbar and bread crumbs

--- a/public/index.html
+++ b/public/index.html
@@ -436,7 +436,7 @@
                 </div>
             </div>
             <!--the bottom navbar-->
-            <nav class=" md:hidden bg-white shadow-xl rounded-t-xl sticky bottom-0 left-0 pb-2"
+            <nav class=" md:hidden bg-white shadow-[0_-4px_8px_0_rgba(0,0,0,0.1)] rounded-t-xl sticky bottom-0 left-0 pb-2"
                  x-data="{nav:'home' , activeClass:'!text-slate-700'}">
                 <ul class="flex justify-evenly items-center">
                     <li class="py-4 px-1" @click="nav='home'">
