--- a/public/singleProduct.html
+++ b/public/singleProduct.html
@@ -17,7 +17,7 @@
                           clip-rule="evenodd"/>
                 </svg>
             </div>
-            <div class="text-lg font-semibold text-slate-800">گوشی آیفون 13 ، 128گیگابایت</div>
+            <div class="text-sm sm:text-lg font-semibold text-slate-800">گوشی آیفون ۱۳ ۱۲۸ گیگابایت</div>
             <div class="w-8 h-8 bg-white shadow-md flex justify-center items-center rounded-lg">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                      stroke="currentColor" class="h-5 w-5">
@@ -27,7 +27,7 @@
             </div>
         </div>
         <!--The breadcrumb section-->
-        <div class="w-full p-4 flex justify-start items-center gap-x-2 text-lg">
+        <div class="w-full p-4 flex justify-start items-center gap-x-2 text-sm sm:text-lg">
             <span class="text-orange-500">تلفن همراه</span>
             <span><svg width="10" height="13" fill="none" xmlns="http://www.w3.org/2000/svg"><path
                     d="m1.196 5.508.006-.007.006-.006c.544-.599 1.558-1.419 2.653-2.178 1.094-.759 2.216-1.419 2.96-1.718l.008-.004c.104-.045.301-.119.51-.183.213-.066.39-.106.485-.112.224.002.437.053.644.157.254.149.457.38.57.649.034.094.09.315.142.55a16.225 16.225 0 0 1 .078.374l.008.045c.148.816.234 2.18.234 3.717 0 1.439-.083 2.74-.203 3.583a11.37 11.37 0 0 0-.036.175v.001c-.02.1-.045.23-.075.368-.066.303-.136.563-.186.662a1.285 1.285 0 0 1-1.132.719h-.045a1.504 1.504 0 0 1-.27-.052 5.083 5.083 0 0 1-.562-.187l-.304-.13c-.707-.302-1.794-.94-2.863-1.678-1.07-.739-2.072-1.543-2.629-2.163l-.008-.008-.008-.008-.002-.003-.01-.01-.037-.039a7.98 7.98 0 0 1-.124-.132 3.335 3.335 0 0 1-.253-.302L.748 7.58l-.006-.008A1.284 1.284 0 0 1 .5 6.807c0-.312.09-.592.254-.817l.108-.12.06-.067c.084-.094.182-.2.274-.295Z"
@@ -40,5 +40,137 @@
             </span>
             <span>آیفون 13</span>
         </div>
+        <!--the product section-->
+        <div class="p-4 flex flex-col items-center justify-center">
+            <!--product image-->
+            <div class="w-full flex justify-center items-center mb-10">
+                <img src="../assets/images/Product%20Image.png" class="w-72" alt="product">
+            </div>
+            <!--product title-->
+            <div class="text-center mb-11">
+                <h1 class="text-slate-800 text-xl sm:text-2xl font-semibold mb-2">گوشی آیفون ۱۳ ۱۲۸ گیگابایت </h1>
+                <span class="text-slate-500 text-lg">َApple Iphone 13 128 GB</span>
+            </div>
+            <!--product colors-->
+            <div class="flex justify-evenly items-center w-full mb-6">
+                <div><h1 class="text-slate-800 text-xl font-semibold">انتخاب رنگ :</h1></div>
+                <div x-data="{color : 'red'}" class="flex items-center" dir="ltr">
+                    <div @click="color='red'" :class="color==='red' ? 'ring-2 ring-red-500 ' : ''"
+                         class="h-8 w-8  sm:w-8 sm:h-8 rounded-full cursor-pointer border-2  bg-red-500 flex justify-center items-center -ml-1.5">
+                        <svg x-show="color==='red'" xmlns="http://www.w3.org/2000/svg"
+                             viewBox="0 0 20 20"
+                             fill="currentColor" class="size-6 sm:size-6 text-white">
+                            <path fill-rule="evenodd"
+                                  d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z"
+                                  clip-rule="evenodd"/>
+                        </svg>
+                    </div>
+                    <div @click="color='blue'"
+                         :class="color==='blue' ? 'ring-2 ring-blue-500 ' : ''"
+                         class="h-8 w-8 sm:w-8 sm:h-8 rounded-full cursor-pointer border-2  bg-blue-500 -ml-1.5 flex justify-center items-center">
+                        <svg x-show="color==='blue'" xmlns="http://www.w3.org/2000/svg"
+                             viewBox="0 0 20 20"
+                             fill="currentColor" class="size-5 sm:size-6 text-white">
+                            <path fill-rule="evenodd"
+                                  d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z"
+                                  clip-rule="evenodd"/>
+                        </svg>
+                    </div>
+                    <div @click="color='green'"
+                         :class="color==='green' ? 'ring-2 ring-green-500 ' : ''"
+                         class="h-8 w-8 sm:w-8 sm:h-8  rounded-full cursor-pointer border-2  bg-green-500 -ml-1.5 justify-center items-center flex">
+                        <svg x-show="color==='green'" xmlns="http://www.w3.org/2000/svg"
+                             viewBox="0 0 20 20"
+                             fill="currentColor" class="size-5 text-white sm:size-6">
+                            <path fill-rule="evenodd"
+                                  d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z"
+                                  clip-rule="evenodd"/>
+                        </svg>
+                    </div>
+                    <div @click="color='yellow'"
+                         :class="color==='yellow' ? 'ring-2 ring-yellow-500 ' : ''"
+                         class="h-8 w-8 sm:w-8 sm:h-8  rounded-full cursor-pointer border-2  bg-yellow-500 -ml-1.5 justify-center items-center flex">
+                        <svg x-show="color==='yellow'" xmlns="http://www.w3.org/2000/svg"
+                             viewBox="0 0 20 20"
+                             fill="currentColor" class="size-5 text-white sm:size-6">
+                            <path fill-rule="evenodd"
+                                  d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z"
+                                  clip-rule="evenodd"/>
+                        </svg>
+                    </div>
+                    <div @click="color='purple'"
+                         :class="color==='purple' ? 'ring-2 ring-purple-500 ' : ''"
+                         class="h-8 w-8 sm:w-8 sm:h-8  rounded-full cursor-pointer border-2  bg-purple-500 -ml-1.5 justify-center items-center flex">
+                        <svg x-show="color==='purple'" xmlns="http://www.w3.org/2000/svg"
+                             viewBox="0 0 20 20"
+                             fill="currentColor" class="size-5 text-white sm:size-6">
+                            <path fill-rule="evenodd"
+                                  d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z"
+                                  clip-rule="evenodd"/>
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <!--product-information-->
+            <div class="w-full grid grid-cols-12 justify-items-center  gap-x-2 gap-y-5">
+                <div class="text-slate-800 flex justify-start items-center gap-x-4 col-span-6">
+                    <div class="w-5 h-5 bg-gray-300 relative rounded-full hidden sm:block">
+                            <span class="absolute top-1.5 right-1.5">
+                                <svg width="18" height="18" fill="none" xmlns="http://www.w3.org/2000/svg"><path
+                                        d="M2.257 8.415v3.368c0 3.367 1.35 4.717 4.718 4.717h4.042c3.368 0 4.718-1.35 4.718-4.717V8.415"
+                                        stroke="#222F5D" stroke-width=".875" stroke-linecap="round"
+                                        stroke-linejoin="round"/><path
+                                        d="M9 8.999c1.372 0 2.385-1.117 2.25-2.49l-.495-5.01H7.252l-.502 5.01c-.135 1.373.877 2.49 2.25 2.49Z"
+                                        stroke="#222F5D" stroke-width=".875" stroke-linecap="round"
+                                        stroke-linejoin="round"/><path
+                                        d="M13.733 8.999c1.515 0 2.625-1.23 2.475-2.737l-.21-2.063c-.27-1.95-1.02-2.7-2.985-2.7h-2.288l.525 5.258c.128 1.237 1.245 2.242 2.483 2.242ZM4.23 8.999c1.238 0 2.355-1.005 2.475-2.242l.165-1.658.36-3.6H4.943c-1.965 0-2.715.75-2.985 2.7l-.203 2.063c-.15 1.507.96 2.737 2.475 2.737ZM9 12.749c-1.253 0-1.875.622-1.875 1.875v1.875h3.75v-1.875c0-1.253-.623-1.875-1.875-1.875Z"
+                                        stroke="#222F5D" stroke-width=".875" stroke-linecap="round"
+                                        stroke-linejoin="round"/></svg>
+                            </span>
+                    </div>
+                    <h1 class="text-[.8rem] min-w-[400px]:text-[1rem]  font-bold">فروشنده : </h1>
+                    <h1 class="text-[.8rem] min-w-[400px]:text-[1rem]  font-normal">دیجی تایز</h1>
+                </div>
+                <div class="flex justify-between items-center gap-x-2 col-span-6">
+                    <div class="w-5 h-5 bg-gray-300 relative rounded-full hidden sm:block">
+                            <span class="absolute top-1.5 right-1.5">
+                                <svg width="17" height="17" fill="none" xmlns="http://www.w3.org/2000/svg"><path
+                                        d="M7.43 1.58 3.897 2.91c-.815.305-1.48 1.268-1.48 2.132v5.263c0 .836.552 1.934 1.225 2.437l3.046 2.274c.999.75 2.642.75 3.64 0l3.046-2.274c.673-.503 1.226-1.6 1.226-2.437V5.043c0-.87-.666-1.834-1.48-2.139L9.583 1.58c-.602-.22-1.566-.22-2.153 0Z"
+                                        stroke="#222F5D" stroke-width="1.063" stroke-linecap="round"
+                                        stroke-linejoin="round"/></svg>
+                            </span>
+                    </div>
+                    <h1 class="text-[.8rem] min-w-[400px]:text-[1rem] font-bold">گارانتی : </h1>
+                    <h1 class="text-[.8rem] min-w-[400px]:text-[1rem]  font-normal">۱۸ ماه زرین خدمت</h1>
+                </div>
+                <div class="flex justify-center items-center gap-x-2 col-span-12">
+                    <div class="w-5 h-5 bg-gray-300 relative rounded-ful hidden sm:block">
+                            <span class="absolute top-1.5 right-1.5">
+                                <svg width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path
+                                        d="M10 1.333V8c0 .733-.6 1.333-1.333 1.333H1.334V5.08a2.6 2.6 0 0 0 2.06.92 2.562 2.562 0 0 0 1.733-.707c.207-.173.38-.393.513-.633.24-.407.373-.887.36-1.387a2.655 2.655 0 0 0-.906-1.94H10Z"
+                                        stroke="#222F5D" stroke-width="1.125" stroke-linecap="round"
+                                        stroke-linejoin="round"/><path
+                                        d="M14.667 9.333v2c0 1.107-.893 2-2 2H12C12 12.6 11.4 12 10.667 12s-1.333.6-1.333 1.333H6.667c0-.733-.6-1.333-1.333-1.333C4.6 12 4 12.6 4 13.333h-.667c-1.106 0-2-.893-2-2v-2h7.334C9.4 9.333 10 8.733 10 8V3.333h1.227c.48 0 .92.26 1.16.673L13.527 6h-.86C12.3 6 12 6.3 12 6.666v2c0 .367.3.667.667.667h2Z"
+                                        stroke="#222F5D" stroke-width="1.125" stroke-linecap="round"
+                                        stroke-linejoin="round"/><path
+                                        d="M5.333 14.667a1.333 1.333 0 1 0 0-2.667 1.333 1.333 0 0 0 0 2.667ZM10.667 14.667a1.333 1.333 0 1 0 0-2.667 1.333 1.333 0 0 0 0 2.667ZM14.667 8v1.333h-2A.669.669 0 0 1 12 8.667v-2c0-.367.3-.667.667-.667h.86l1.14 2Z"
+                                        stroke="#222F5D" stroke-width="1.125" stroke-linecap="round"
+                                        stroke-linejoin="round"/><path
+                                        d="M6 3.333c0 .8-.353 1.513-.906 2A2.666 2.666 0 1 1 3.334.666 2.666 2.666 0 0 1 6 3.333Z"
+                                        stroke="#222F5D" stroke-width="1.125" stroke-miterlimit="10"
+                                        stroke-linecap="round" stroke-linejoin="round"/><path d="M3.5 2.499v1l-.833.5"
+                                                                                              stroke="#222F5D"
+                                                                                              stroke-width="1.125"
+                                                                                              stroke-miterlimit="10"
+                                                                                              stroke-linecap="round"
+                                                                                              stroke-linejoin="round"/></svg>
+                            </span>
+                    </div>
+                    <h1 class="text-[.8rem] min-w-[400px]:text-[1rem] font-bold">ارسال توسط : </h1>
+                    <h1 class="text-[.8rem] min-w-[400px]:text-[1rem]  font-normal">انبار تهران</h1>
+                </div>
+            </div>
+        </div>
+        <script src="//unpkg.com/alpinejs" defer></script>
     </body>
 </html>
