design the bottom price and buy product section

--- a/public/singleProduct.html
+++ b/public/singleProduct.html
@@ -171,6 +171,18 @@
                 </div>
             </div>
         </div>
+        <!--product buy section -->
+        <div class="md:hidden flex justify-between items-center bg-white sticky bottom-0 left-0 rounded-xl px-4 py-2.5 w-full shadow-[0_-4px_9px_0_rgba(0,0,0,0.1)]">
+            <div class="flex items-center justify-between">
+                <button class=" bg-orange-500 text-lg rounded-xl text-white px-8 py-4">اضافه به سبد
+                    خرید
+                </button>
+            </div>
+            <div class="text-slate-800 text-center">
+                <h1 class="font-semibold text-2xl">۲۸,۲۵۰,۰۰۰</h1>
+                <span class="text-lg">تومان</span>
+            </div>
+        </div>
         <script src="//unpkg.com/alpinejs" defer></script>
     </body>
 </html>
