design single product section and the seller details section

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
                 <span class="text-slate-800 text-sm mr-2 font-medium">فیلتر : اپل</span>
             </div>
         </div>
-        <!--The AppBar of the application : top navbar and search icon-->
+        <!--The AppBar of the application : top navbar and search icon =>desktop nav -->
         <nav class="p-4 hidden md:block bg-white shadow-lg sticky top-0 z-10 mb-4">
             <div class="flex justify-between items-center container mx-auto max-w-screen-2xl">
                 <!--menu-->
