add product review section to the app

--- a/public/singleProduct.html
+++ b/public/singleProduct.html
@@ -332,26 +332,11 @@
                                         <h1 class="text-lg font-semibold ">2G 3G 4G 5G</h1>
                                     </div>
                                 </div>
-                                <!--<ul class="list-disc marker:text-orange-500  flex flex-col">
-                                    <li>
-                                        <h1 class="text-xl"> بازه ی اندازه ی صفحه نمایش : </h1>
-                                        <h1 class="text-xl font-semibold ">0.6 اینچ و بیشتر</h1>
-                                    </li>
-                                    <li>
-                                        <h1 class="text-xl"> حافظه ی داخلی : </h1>
-                                        <h1 class="text-xl font-semibold ">128 گیگابایت</h1>
-                                    </li>
-                                    <li>
-                                        <h1 class="text-xl"> شبکه های ارتباطی : </h1>
-                                        <h1 class="text-xl font-semibold ">2G 3G 4G 5G</h1>
-                                    </li>
-                                </ul>-->
                             </div>
                         </div>
                     </div>
                     <!--seller details -->
                     <div class=" w-full lg:w-1/4 h-full hidden md:block md:sticky md:bottom-3 md:left-0">
-
                         <div class="w-full flex flex-row md:flex-col rounded-xl px-2 bg-white md:bg-white lg:bg-gray-100 ">
                             <!--seller details about post adn ....-->
                             <div class="flex justify-between items-center w-full gap-x-2 lg:block py-5 px-1 xl:px-4  lg:space-y-7  rounded-xl mb-10 lg:mb-16">
@@ -434,7 +419,63 @@
                             </div>
                         </div>
                     </div>
-                    <!--product complete check-->
+                </div>
+                <!--product review section -->
+                <div class="w-full px-4 md:px-14 pt-20 bg-white pb-4 flex flex-col gap-y-12 rounded-xl">
+                    <!--product check-->
+                    <div class="text-slate-800 text-justify">
+                        <h1 class="text-[1.75rem] mb-7 font-semibold">نقد و بررسی محصول</h1>
+                        <p class="text-xl text-justify leading-10">
+                            آیفون 13 در اواخر شهریور 1400 با پردازنده A15 Bionic پنج نانومتری و یه پردازنده گرافیکی 4
+                            هسته‌ای معرفی شد. خیلی از افراد با بررسی آیفون 13 به این نتیجه رسیدن که این گوشی نسبت به
+                            آیفون 12 هیچ تغییری نکرده در حالی که بعضی‌ها معتقد بودند بهبود و تغییرات خوبی داشته. با توجه
+                            به رجیستر نشدن نسخه‌های بالاتر، آیفون 13 هنوز پرطرفدارترین گوشی اپل در ایران محسوب میشه و
+                            فروش همچنان خوبی داره.
+                            بررسی iPhone 13 اپل نشان داده که قیمت ارزنده، دوربین باکیفیت 12 مگاپیکسلی، طراحی زیبا و
+                            پردازنده پرقدرت توی این محبوبیت، تاثیر زیادی داشتند. پس با بررسی گوشی آیفون 13 اپل در
+                            موبونیوز همراه باشید تا ببینیم چرا این گوشی یکی از محبوب‌ترین گوشی‌های اپل در ایران هست!
+                        </p>
+                    </div>
+                    <div class="text-slate-800 text-justify leading-loose">
+                        <h1 class="text-[1.75rem] mb-7 font-semibold">طراحی</h1>
+                        <p class="text-xl text-justify leading-10">
+                            با نقد و بررسی آیفون 13 دیدیم که فریم میانی از جنس استیل ضدزنگ ساخته شده و مات است. این فریم
+                            تضاد جذابی رو با قاب پشتی براق و شیشه‌ای ایجاد کرده. بالای گوشی خبری از هیچ چیز خاصی نیست و
+                            کویر است، زیر گوشی اسپیکر، میکروفون مکالمه و درگاه شارژ Lighting دیده میشه. لبه سمت راست
+                            فریم میانی دکمه پاور و آنتن 5G قرار داره و سمت چپ فریم میانی دکمه‌های کنترل‌کننده صدا دیده
+                            میشن.
+
+                            یکی از تفاوت‌های آیفون 13 نسبت به آیفون‌های نسخه قبل، محل قرارگیری دکمه کنترل‌کننده صدا است.
+                            دکمه‌های کنترل‌کننده صدا نسبت به نسل قبل بالاتر اومدن تا کاربر دسترسی راحت‌تری بهشون داشته
+                            باشه.
+                        </p>
+                    </div>
+                    <div class="w-full  justify-center hidden md:flex">
+                        <img class="w-72"
+                             src="../assets/images/Apple_iPhone-13-Pro_Colors_09142021_big.jpg.slideshow-large_2x-removebg-preview.png"/>
+                    </div>
+                    <div class="text-slate-800 text-justify leading-loose">
+                        <h1 class="text-[1.75rem] mb-7 font-semibold">دوربین</h1>
+                        <p class="text-xl text-justify leading-10">
+                            کیفیت تصاویر ثبت شده با سنسور اصلی نسبت به قبل بیشتر شده. در این گوشی علاوه بر کیفیت، شارپنس
+                            و روشنایی بهبود داشته و جزئیات بیشتری رو میشه با سنسور اصلی ثبت کرد. این اتفاق احتمالا به
+                            خاطر قوی‌تر بودن پردازنده آیفون 13 نسبت به آیفون‌های قبلی رخ داده.
+                        </p>
+                    </div>
+                    <div class="text-slate-800 text-justify leading-loose">
+                        <h1 class="text-[1.75rem] mb-7 font-semibold">باتری</h1>
+                        <p class="text-xl text-justify leading-10">
+                            گوشی iPhone 13 نسبت به سال قبل تقریبا 10 گرم سنگین‌تر شده چون ظرفیت باتری اون از 2815 میلی
+                            آمپر ساعت به 3240 میلی آمپر ساعت تبدیل شده. اپل توی مراسم رونمایی ادعا کرده بود که آیفون 13
+                            نسبت به آیفون سال، قبل 20 درصد بهبود عملکرد داره.
+
+                            داخل جعبه این گوشی خبری از آداپتور نیست اما این گوشی هم مثل تمام آیفون‌ها از شارژر سریع 20
+                            واتی پشتیبانی می‌کنه. همچنین میشه با استفاده از تکنولوژی مگ سیف و با سرعت شارژ 15 واتی هم
+                            این گوشی رو شارژ کرد. آیفون 13 از شارژ مغناطیسی 7.5 واتی هم پشتیبانی می‌کنه که باعث شده بخش
+                            باتری این گوشی کامل باشه. درسته که آداپتور آیفون نسبت به آداپتور برندهای دیگه ضعیف‌تر است
+                            اما توی سرعت شارژ شدن، تاثیری نداره.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
